# ruby-references

./: Cargo.toml
benches/: parse_benchmark.rs
src/: cache.rs  cached_file.rs  common_test.rs  configuration.rs  constant_resolver.rs  lib.rs  reference.rs
src/cache/: cache.rs  cached_file.rs  cached_noop.rs  mod.rs
src/parser/: collector.rs  inflector_shim.rs  mod.rs  namespace_calculator.rs  processor.rs  self_reference_filterer.rs
src/preprocess/: file_utils.rs  inflector_shim.rs  mod.rs  parse_utils.rs  parser.rs  rails_utils.rs
src/references/: cache.rs  cached_file.rs  common_test.rs  configuration.rs  mod.rs  reference.rs
src/references/parser/: inflector_shim.rs  mod.rs  processor.rs
src/references/zeitwerk/: cache.rs  constant_resolver.rs  mod.rs
src/zeitwerk/: cache.rs  constant_resolver.rs  mod.rs
tests/fixtures/app_with_rails_relationships/: references.json
tests/fixtures/simple_app/: references.json
tests/fixtures/small-app/app/models/: client_invitation.rb  user.rb
tests/fixtures/small-app/app/models/concerns/: has_uuid.rb
tests/fixtures/small-app/app/views/layouts/: application.html.erb
tests/fixtures/small-app/config/: credentials.yml.enc
tests/fixtures/small-app/config/environments/: production.rb
